--- a/packages/leaf/package.json
+++ b/packages/leaf/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@leaf/core",
+  "name": "@leaf-web/core",
   "version": "0.0.1",
   "description": "Reasonable web components framework.",
   "main": "./dist/leaf.min.js",
