--- a/packages/reactivity/package.json
+++ b/packages/reactivity/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@leaf-web/reactivity",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Reasonable web components framework.",
   "main": "./dist/reactivity.min.js",
   "types": "./dist/src",
@@ -13,11 +13,9 @@
   },
   "author": "Sam Zhang",
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
-    "lerna": "^5.3.0",
     "@rollup/plugin-typescript": "^8.4.0",
-    "rollup-plugin-terser": "^7.0.2",
+    "@types/node": "^18.7.13",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.19.0",
@@ -27,9 +25,10 @@
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "lerna": "^5.3.0",
     "prettier": "2.7.1",
+    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "@types/node": "^18.7.13"
+    "typescript": "^4.7.4"
   }
 }
