--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@
 **/.rollup.cache
 .editorconfig
 /packages/**/index.html
+
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
