--- a/packages/leaf/package.json
+++ b/packages/leaf/package.json
@@ -2,8 +2,8 @@
   "name": "@leaf-web/core",
   "version": "0.0.4",
   "description": "Reasonable web components framework.",
-  "main": "./dist/leaf.min.js",
-  "types": "./dist/src",
+  "main": "./dist/leafjs.min.js",
+  "types": "./dist/leafjs.d.ts",
   "scripts": {
     "build": "run-s clean && run-p build:rollup",
     "build:rollup": "rollup -c",
@@ -14,7 +14,7 @@
   "author": "Sam Zhang",
   "license": "MIT",
   "devDependencies": {
-    "@leaf/reactivity": "*",
+    "@leaf-web/reactivity": "workspace:*",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.4.0",
     "@types/node": "^18.7.13",
@@ -29,6 +29,8 @@
     "eslint-plugin-promise": "^6.0.0",
     "lerna": "^5.3.0",
     "prettier": "2.7.1",
+    "rollup": "2.78.1",
+    "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
