--- a/packages/reactivity/package.json
+++ b/packages/reactivity/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.4",
   "description": "Reasonable web components framework.",
   "main": "./dist/reactivity.min.js",
-  "types": "./dist/src",
+  "types": "./dist/reactivity.d.ts",
   "scripts": {
     "build": "run-s clean && run-p build:rollup",
     "build:rollup": "rollup -c",
@@ -27,6 +27,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "lerna": "^5.3.0",
     "prettier": "2.7.1",
+    "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
