--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "private": true,
   "devDependencies": {
+    "@lerna-lite/cli": "^1.11.1",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.19.0",
@@ -29,7 +30,6 @@
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
-    "lerna": "^5.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "2.7.1",
     "tslib": "^2.4.0",
