--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@leaf-web/core",
+  "name": "@leaf-web/parser",
   "version": "0.0.7",
   "description": "Reasonable web components framework.",
-  "main": "./dist/leaf.min.js",
-  "types": "./dist/leaf.d.ts",
+  "main": "./dist/parser.min.js",
+  "types": "./dist/parser.d.ts",
+  "bin": "./dist/parser.min.js",
   "scripts": {
     "build": "run-s clean && run-p build:rollup",
     "build:rollup": "rollup -c",
@@ -13,11 +14,27 @@
   },
   "author": "Sam Zhang",
   "license": "MIT",
-  "devDependencies": {
-    "@leaf-web/reactivity": "workspace:*",
+  "dependencies": {
+    "@babel/core": "^7.18.13",
+    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@babel/plugin-transform-react-jsx": "^7.18.10",
+    "@babel/plugin-transform-template-literals": "^7.18.9",
+    "@babel/preset-env": "^7.18.10",
+    "@leaf-web/core": "workspace:*",
     "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-multi-entry": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
+    "commander": "^9.4.0",
+    "glob": "^8.0.3",
+    "rollup": "2.78.1",
+    "rollup-plugin-terser": "^7.0.2"
+  },
+  "devDependencies": {
+    "@rollup/plugin-dynamic-import-vars": "^1.4.4",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-typescript": "^8.4.0",
+    "@types/babel__core": "^7.1.19",
+    "@types/glob": "^8.0.0",
     "@types/node": "^18.7.13",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
@@ -28,11 +45,10 @@
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
-    "lerna": "^5.3.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.7.1",
-    "rollup": "2.78.1",
+    "rimraf": "^3.0.2",
     "rollup-plugin-dts": "^4.2.2",
-    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
