--- a/packages/leaf/package.json
+++ b/packages/leaf/package.json
@@ -13,8 +13,11 @@
   },
   "author": "Sam Zhang",
   "license": "MIT",
+  "browserslist": "> 0.25% and not dead",
   "devDependencies": {
+    "@babel/preset-env": "^7.18.10",
     "@leaf-web/reactivity": "workspace:*",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.4.0",
@@ -29,7 +32,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "lerna": "^5.3.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.7.1",
+    "rimraf": "^3.0.2",
     "rollup": "2.78.1",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-terser": "^7.0.2",
