--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -23,12 +23,22 @@
     "@babel/plugin-transform-template-literals": "^7.18.9",
     "@babel/preset-env": "^7.18.10",
     "@leaf-web/core": "workspace:*",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-inject": "^4.0.4",
     "@rollup/plugin-multi-entry": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
+    "chalk": "^4.1.2",
+    "chokidar": "^3.5.3",
     "commander": "^9.4.0",
+    "express": "^4.18.1",
+    "express-ws": "^5.0.2",
     "glob": "^8.0.3",
+    "nollup": "^0.20.1",
+    "open": "^8.4.0",
     "rollup": "2.78.1",
+    "rollup-plugin-commonjs-alternate": "^0.8.0",
+    "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-terser": "^7.0.2"
   },
   "devDependencies": {
@@ -36,8 +46,11 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-typescript": "^8.4.0",
     "@types/babel__core": "^7.1.19",
+    "@types/express": "^4.17.13",
+    "@types/express-ws": "^3.0.1",
     "@types/glob": "^8.0.0",
     "@types/node": "^18.7.13",
+    "@types/rollup-plugin-progress": "^1.1.1",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "eslint": "^8.19.0",
