--- a/packages/reactivity/package.json
+++ b/packages/reactivity/package.json
@@ -13,7 +13,10 @@
   },
   "author": "Sam Zhang",
   "license": "MIT",
+  "browserslist": "> 0.25% and not dead",
   "devDependencies": {
+    "@babel/preset-env": "^7.18.10",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-typescript": "^8.4.0",
     "@types/node": "^18.7.13",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
@@ -26,7 +29,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "lerna": "^5.3.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.7.1",
+    "rimraf": "^3.0.2",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.4.0",
