--- a/packages/leaf/package.json
+++ b/packages/leaf/package.json
@@ -3,6 +3,8 @@
   "version": "0.2.3",
   "description": "Reasonable web components framework.",
   "main": "./dist/leaf.min.js",
+  "module": "./dist/es/packages/leaf/src/index.js",
+  "type": "module",
   "types": "./dist/leaf.d.ts",
   "scripts": {
     "build": "run-s clean && run-p build:rollup",
