--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -36,8 +36,11 @@
     "glob": "^8.0.3",
     "nollup": "^0.20.1",
     "open": "^8.4.0",
+    "postcss": "^8.4.16",
     "rollup": "2.78.1",
     "rollup-plugin-commonjs-alternate": "^0.8.0",
+    "rollup-plugin-minify-html-literals": "^1.2.6",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-terser": "^7.0.2"
   },
