--- a/packages/create-leafjs-app/package.json
+++ b/packages/create-leafjs-app/package.json
@@ -14,6 +14,11 @@
   },
   "author": "Sam Zhang",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/samzhangjy/leafjs/tree/main/packages/create-leafjs-app"
+  },
+  "homepage": "https://leafjs.samzhangjy.com/",
   "dependencies": {
     "commander": "^9.4.0",
     "fs-extra": "^10.1.0",
