--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -16,6 +16,11 @@
   },
   "author": "Sam Zhang",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/samzhangjy/leafjs/tree/main/packages/parser"
+  },
+  "homepage": "https://leafjs.samzhangjy.com/",
   "dependencies": {
     "@babel/core": "^7.18.13",
     "@babel/plugin-syntax-jsx": "^7.18.6",
