--- a/packages/reactivity/package.json
+++ b/packages/reactivity/package.json
@@ -15,6 +15,11 @@
   },
   "author": "Sam Zhang",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/samzhangjy/leafjs/tree/main/packages/reactivity"
+  },
+  "homepage": "https://leafjs.samzhangjy.com/",
   "browserslist": "> 0.25% and not dead",
   "devDependencies": {
     "@babel/preset-env": "^7.18.10",
