feat: added onPropChange hook

--- a/packages/create-leafjs-app/templates/default-typescript/leaf.config.json
+++ b/packages/create-leafjs-app/templates/default-typescript/leaf.config.json
@@ -1,5 +1,6 @@
 {
   "entry": "./src/index.tsx",
   "entryHTML": "index.html",
-  "outputDir": "./dist"
+  "outputDir": "./dist",
+  "typescript": "./tsconfig.json"
 }
